Issue #2042: Increased z-index of autocomplete dropdowns to make them visible when used in overlay dialogs.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -1,7 +1,7 @@
 /* OTOBO is a web-based ticketing system for service organisations.
 
 Copyright (C) 2001-2020 OTRS AG, https://otrs.com/
-Copyright (C) 2019-2023 Rother OSS GmbH, https://otobo.de/
+Copyright (C) 2019-2024 Rother OSS GmbH, https://otobo.de/
 
 This program is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
@@ -1149,7 +1149,8 @@ td.Highlight a.ui-state-default {
  */
 
 .ui-autocomplete {
-    z-index: 20 !important;
+    /* important necessary because it would otherwise be overwritten by jquery-ui css */
+    z-index: 6100 !important;
     max-height: 200px;
     overflow-x: hidden;
     overflow-y: scroll;
